--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v1
+      - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
         run: cl .\priority_inversion.c Synchronization.lib Kernel32.lib
       - name: Run
